// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`golden: 生成コードの構造スナップショット M1 フィクスチャの code と initialHtml を固定する 1`] = `
"import { mount, hydrate } from '../src/runtime.js';

export let count = 0;
export let doubled = count * 2;

const __INITIAL_HTML__ = "<div data-iris-id=\\"m0\\">0</div>";

let __markers__;
export function mountComponent(container) {
  ({ markers: __markers__ } = mount(container, __INITIAL_HTML__));
}

export function hydrateComponent(container) {
  ({ markers: __markers__ } = hydrate(container));
}

export function update_count() {
  doubled = count * 2;
  { const __el = __markers__.get("m0"); if (__el) { __el.textContent = \`\${count + doubled}\`; } }
}
"
`;

exports[`golden: 生成コードの構造スナップショット M1 フィクスチャの code と initialHtml を固定する 2`] = `"<div data-iris-id="m0">0</div>"`;

exports[`golden: 生成コードの構造スナップショット M2 フィクスチャの code を固定する 1`] = `
"import { mount, hydrate } from '../src/runtime.js';

export let count = 0;
export let doubled = count * 2;

const __INITIAL_HTML__ = "<div><span data-iris-id=\\"m0\\">0</span><button data-iris-id=\\"m1\\">+</button></div>";

const __handler_m1_click = (...__args) => { count = count + 1; update_count(); };

let __markers__;
export function mountComponent(container) {
  ({ markers: __markers__ } = mount(container, __INITIAL_HTML__));
  __markers__.get("m1")?.addEventListener("click", __handler_m1_click);
}

export function hydrateComponent(container) {
  ({ markers: __markers__ } = hydrate(container));
  __markers__.get("m1")?.addEventListener("click", __handler_m1_click);
}

export function update_count() {
  doubled = count * 2;
  { const __el = __markers__.get("m0"); if (__el) { __el.textContent = \`\${count + doubled}\`; } }
}
"
`;
